<resources>
    <string name="app_name">The Movie Database</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="authActivity">AuthActivity</string>
    <string name="logout">Logout</string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>
    <string name="first_time_here_click_here_for_register"><u>First time here? click here for register</u></string>
    <string name="sort_by_most_popular">Sort by popularity</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="date">date</string>
    <string name="welcome_to_the_movie_database">WELCOME TO THE\nMOVIE DATABASE</string>
    <string name="name">Name</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="background_image">background image</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="no_image_available_ncheck_your_internet_connection">No image available\ncheck your internet connection</string>
    <string name="loading_movies_number">0 / 10000</string>
    <string name="loading_movies_text">Loading movies, please wait</string>
</resources>