<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_title"
        android:orderInCategory="102"
        android:title="@string/sort_by_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_date"
        android:orderInCategory="103"
        android:title="@string/sort_by_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_vote"
        android:orderInCategory="104"
        android:title="@string/sort_by_most_popular"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorites"
        android:orderInCategory="105"
        android:title="@string/favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="106"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

</menu>